[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_XboxController",
] }
winreg = "0.55"
